--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -1,10 +1,30 @@
 {% extends 'base_content.html' %}
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Welcome to your dashboard {{ user.username }}</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>Welcome to your dashboard {{ user.username }}</h1>
+                <div class="container mt-5">
+                    <div class="section">
+                        <h1>Upload Image</h1>
+                        <hr>
+                        <br>
+                        <form action="{% url 'dashboard' %}" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <p>{{ form.non_field_errors }}</p>
+                            <p>{{ form.file.label_tag }} {{ form.file.help_text }}</p>
+                            <p>
+                                {{ form.file.errors }}
+                                {{ form.file }}
+                            </p>
+                            <p><input type="submit" value="Upload"/></p>
+                        </form>
+                    </div>
+                    {% if image_url %}
+                        <p>File uploaded at: <a href="{{ image_url }}">{{ image_url }}</a></p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 {% endblock %}
