add a filelist page to inspect the users' uploaded files

--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -17,12 +17,13 @@
                                 {{ form.file.errors }}
                                 {{ form.file }}
                             </p>
-                            <p><input type="submit" value="Upload"/></p>
+                            <p><input class="btn btn-primary" type="submit" value="Upload"/></p>
                         </form>
                     </div>
                     {% if image_url %}
                         <p>File uploaded at: <a href="{{ image_url }}">{{ image_url }}</a></p>
                     {% endif %}
+                    <a href="{% url 'filelist' %}">My Files</a>
                 </div>
             </div>
         </div>
