--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -3,7 +3,16 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Welcome to your dashboard {{ user.username }}</h1>
+                <div class="row">
+                    <div class="col-10">
+                        <h1>Welcome to your dashboard {{ user.username }}</h1>
+                    </div>
+                    <div class="col-2">
+                        <a type="button" class="btn btn-primary text-nowrap" href="{% url 'share_file' %}">
+                            <i class="bi bi-box-arrow-up"></i> Share
+                        </a>
+                    </div>
+                </div>
                 <div class="container mt-5">
                     <div class="section">
                         <h1>Upload Image</h1>
