Add notifications sidebar and notifications when files are shared
-Add notification_sidebar partial that shows the sidebar when the notification icon is clicked
-Add notification icon to navbar menu
-Add notification model to represent notifications
-Edit all views to get the notifications for the current user and pass it into the template
-Edit base_content partial to include notification sidebar partial

--- a/tasks/templates/base_content.html
+++ b/tasks/templates/base_content.html
@@ -2,6 +2,7 @@
 {% block body %}
   {% include 'partials/navbar.html' %}
   {% include 'partials/messages.html' %}
+  {%include 'partials/notifications_bar.html'%}
   {% block content %}
   {% endblock %}
 {% endblock %}
