--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -1,5 +1,9 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+  <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
+
+    <li class="nav-item dropdown">
+      <a class="nav-link" href = "#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><span class="bi bi-bell"></span></a>
+    </li>
     <li class="nav-item dropdown">
       <a class="nav-link" href="#" id="user-account-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="bi-person-circle"></span>
