--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-sm-auto p-3 sticky-top">
+<div class="col-sm-auto bg-light p-3 sticky-top">
     <!-- A vertical navbar -->
         <!-- Links -->
         <ul class="nav flex-column nav-pills nav-fill">
