--- a/tasks/templates/password.html
+++ b/tasks/templates/password.html
@@ -1,6 +1,6 @@
 {% extends 'base_content.html' %}
 {% block content %}
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <div class="col-12">
       <h1>Change password</h1>
