--- a/tasks/templates/share_file.html
+++ b/tasks/templates/share_file.html
@@ -1,6 +1,6 @@
 {% extends 'base_content.html' %}
 {% block content %}
-<div class="container">
+<div class="container mt-3">
   <form method="post" action="{% url 'share_file' %}">
     {% csrf_token %}
     <div class="row">
