--- a/tasks/templates/shared_file_list.html
+++ b/tasks/templates/shared_file_list.html
@@ -15,7 +15,7 @@
                                 <p class="card-text">Share Date: {{ file.share_date }}</p>
                                 <a href="{{ file.shared_file.url }}" class="btn btn-primary me-1 " target="_blank">View PDF</a>
 
-                                <!--Placeholder functionality for now-->
+                                <!--Placeholder functionality for now, doesn't Remove PDF-->
                                 <a href="{{ upload.file.url }}" class="btn btn-primary">Remove PDF</a>
                             </div>
                         </div>
