--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -14,11 +14,14 @@
                                     <p class="card-text">Uploaded on: {{ upload.uploaded_at }}</p>
                                     <!--Placeholder for now-->
                                     <p class="card-text">Shared With: "Some people"</p>
-                                    <a href="{{ upload.file.url }}" class="btn btn-primary me-1 " target="_blank">View PDF</a>
-                                    <a class="btn btn-primary me-1" data-bs-toggle="offcanvas" data-bs-target="#sharePDFPopup{{ upload.id }}" aria-controls="sharePDFPopup{{ upload.id }}">Share PDF</a>    
-                                    
-                                    <!--Placeholder, doesn't delete PDF-->
-                                    <a href="{{ upload.file.url }}" class="btn btn-primary">Delete PDF</a>
+                                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                                        <a href="{{ upload.file.url }}" class="btn btn-primary me-1 " target="_blank">View PDF</a>
+                                        <a class="btn btn-primary me-1" data-bs-toggle="offcanvas" data-bs-target="#sharePDFPopup{{ upload.id }}" aria-controls="sharePDFPopup{{ upload.id }}">Share PDF</a>
+                                        <form action="{% url 'delete_upload' upload.id %}" method="post">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger"><i class="bi bi-trash-fill"></i>Remove</button>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
