improve SharedFiles model, implement restrictions on sharing, complete testing

--- a/tasks/templates/share_file.html
+++ b/tasks/templates/share_file.html
@@ -61,5 +61,10 @@
       }
     }
   });
+  document.getElementById('search').addEventListener('keydown', function(e) {
+    if (e.key === 'Enter') {
+      e.preventDefault();
+    }
+  })
 </script>
 {% endblock %}
