update delete views, and refactor

--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -18,7 +18,10 @@
                                     <a class="btn btn-primary me-1" data-bs-toggle="offcanvas" data-bs-target="#sharePDFPopup{{ upload.id }}" aria-controls="sharePDFPopup{{ upload.id }}">Share PDF</a>    
                                     
                                     <!--Placeholder, doesn't delete PDF-->
-                                    <a href="{{ upload.file.url }}" class="btn btn-primary">Delete PDF</a>
+                                    <form action="{% url 'delete_upload' upload.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger"><i class="bi bi-trash-fill"></i>Remove</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
