--- a/tasks/templates/partials/notifications_bar.html
+++ b/tasks/templates/partials/notifications_bar.html
@@ -10,9 +10,12 @@
   }
 </style>
 {%load static%}
-<!--Get notifications from custom tag-->
+<!--Get notifications from custom tag only if user is logged in-->
+{%if user.is_authenticated%}
 {% load notification_tags %}
 {% get_notifications user as notifications %}
+{%endif%}
+
 <!--The other sidebar for notifications-->
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header">
@@ -35,8 +38,8 @@
         <div class="card card-body mb-3 notification-card" id="closeable-card" style="width: 350px;">
           <div class="row g-0">
               <div class="col-md-9 p-2">
-                  <h5 class="card-title fs-6">{{notification.shared_file_instance.shared_by}} shared a file with you</h5>
-                  <a href="{{notification.shared_file_instance.shared_file.url}}" class="card-link">{{notification.shared_file_instance.shared_file.name}}</a>
+                  <h5 class="card-title fs-6">{{notification.shared_file_instance.shared_by.username}} shared a file with you</h5>
+                  <a href="{{notification.shared_file_instance.shared_file.file.url}}" class="card-link">{{notification.shared_file_instance.shared_file.file.name}}</a>
               </div>
               <div class="col-md-2 mr-2">
                   <p class="card-text"><small class="text-body-secondary" style="font-size:12px">{{notification.time_of_notification}}</small></p>
