--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -12,13 +12,24 @@
                                 <div class="card-body mb-2">
                                     <h5 class="card-title">{{ upload.file.name }}</h5>
                                     <p class="card-text">Uploaded on: {{ upload.uploaded_at }}</p>
-                                    <!--Placeholder for now-->
-                                    <p class="card-text">Shared With: "Some people"</p>
+
+                                    <!--If file has been shared with others-->
+                                    {% if upload.get_shared_users %}
+                                    <p class="card-text">Shared With: 
+                                        {% for user in upload.get_shared_users %} 
+                                            {{user}} 
+                                        {% endfor %}
+                                    </p>
+                                    {% endif %}
+                                    
                                     <a href="{{ upload.file.url }}" class="btn btn-primary me-1 " target="_blank">View PDF</a>
                                     <a class="btn btn-primary me-1" data-bs-toggle="offcanvas" data-bs-target="#sharePDFPopup{{ upload.id }}" aria-controls="sharePDFPopup{{ upload.id }}">Share PDF</a>    
                                     
-                                    <!--Placeholder, doesn't delete PDF-->
-                                    <a href="{% url 'delete_pdf' %}" class="btn btn-primary">Delete PDF</a>
+                                    <!--Delete PDF-->
+                                    <form action="{% url 'delete_upload' upload.id %}" method="post" class="d-inline">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger"><i class="bi bi-trash-fill"></i>Delete</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
