--- a/tasks/templates/preferences.html
+++ b/tasks/templates/preferences.html
@@ -4,18 +4,22 @@
 <head>
     <!-- Other meta tags, title, etc. -->
 
-    <!-- Link to custom.css for dark mode styles -->
+    <!-- Link to Bootstrap and your custom.css styles -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'custom.css' %}" rel="stylesheet">
 </head>
 
 <body class="{% if dark_mode_preference == 'on' %}dark-mode{% endif %}">
-    <h1>Preferences</h1>
-    <form method="post">
-        {% csrf_token %}
-        <h2>Appearance</h2>
-        <label for="dark_mode">Dark Mode</label>
-        <input type="checkbox" id="dark_mode" name="dark_mode" {% if dark_mode_preference == 'on' %}checked{% endif %}>
-        <input type="submit" value="Save Preferences">
-    </form>
+    <div class="container">
+        <h1>Preferences</h1>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="dark_mode">Dark Mode</label>
+                <input type="checkbox" id="dark_mode" name="dark_mode" {% if dark_mode_preference == 'on' %}checked{% endif %}>
+            </div>
+            <button type="submit" class="btn btn-primary">Save Preferences</button>
+        </form>
+    </div>
 </body>
 </html>
