--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -4,6 +4,8 @@
         {% url 'dashboard' as dashboard %}
         {% url 'filelist' as filelist %}
         {% url 'shared_file_list' as shared_file_list %}
+        {% url 'team_list' as team_list %}
+        {% url 'create_team' as create_team %}
 
         <ul class="nav flex-column nav-pills nav-fill">
             <!--For each item, it highlights the link if in its corresponding page. The page is passed in as a parameter-->
@@ -22,7 +24,7 @@
                 {% endif %}
             </li>
             <li class="nav-item">
-                {% if request.path == team_list %}
+                {% if request.path == team_list or request.path == create_team %}
                     <a class="nav-link active text-center" aria-current="page" href="{% url 'team_list' %}">My Teams</a>
                 {%else%}
                     <a class="nav-link text-center" aria-current="page" href="{% url 'team_list' %}">My Teams</a>
