--- a/tasks/templates/list_team.html
+++ b/tasks/templates/list_team.html
@@ -1,28 +1,28 @@
 {% extends 'base_content_with_sidebar.html' %}
 {% block content %}
-<div class="col-12 p-2">
-    <div class="row">
-        <div class="col-10">
-            <h1>My teams:</h1>
+    <div class="col-12 p-2">
+        <div class="row">
+            <div class="col-10">
+                <h1>My teams:</h1>
+            </div>
+            <div class="col-2">
+                <a type="button" class="btn btn-primary text-nowrap mt-2" href="{% url 'create_team' %}">
+                    Create Team
+                </a>
+            </div>
         </div>
-        <div class="col-2">
-            <a type="button" class="btn btn-primary text-nowrap mt-2" href="{% url 'create_team' %}">
-                Create Team
-            </a>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-12">
-            <ul>
-                {% for team in team_joined %}
-                    <li>
-                        <a href="#">{{ team.name }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
+        <div class="row">
+            <div class="col-12">
+                <ul>
+                    {% for team in team_joined %}
+                        <li>
+                            <a href="{% url 'team_detail' team_id=team.id %}">{{ team.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-    </div>
 
-</div>
+    </div>
 {% endblock %}
