--- a/tasks/templates/create_team.html
+++ b/tasks/templates/create_team.html
@@ -1,7 +1,9 @@
 {% extends 'base_content_with_sidebar.html' %}
 {% block content %}
-    <section class="d-lg-flex justify-content-lg-center align-items-lg-center" style="border-radius: 20px;">
-        <section class="position-relative py-4 py-xl-5">
+
+    <a href="{% url 'team_list' %}">&lt&lt back</a>
+    <div class="row justify-content-center">
+        <div class="col-3">
             <div class="container">
                 <div class="row d-flex justify-content-center" style="margin-top: 1px;">
                     <div class="col-12 d-xl-flex">
@@ -10,15 +12,16 @@
                             <div class="card-body d-flex flex-column align-items-left"
                                  style="box-shadow: 0px 1px 4px 1px rgba(0,0,0,0.25);border-radius: 20px;">
                                 <div class="d-xl-flex flex-column justify-content-xl-start">
-                                    <h1 style="font-weight: bold;font-size: 36px;">Create Team</h1>
+                                    <h1 style="font-size: 36px;">Create Team</h1>
                                 </div>
                                 <form class="text-center" action="{% url 'create_team' %}" method="post"
                                       style="margin-top: 0px;">
                                     {% csrf_token %}
                                     {% include 'partials/create_team_form.html' with form=form %}
                                     <div class="mb-3">
-                                        <input type="submit" value="Create Team" class="btn btn-primary d-block w-100"
-                                               style="height: 50px;border-radius: 70px;margin-top: 40px;background: #0d6efd;"></input>
+                                        <input type="submit" class="btn btn-primary mt-3d-block"
+                                               style="height: 45px; width: 150px; border-radius: 70px;margin-top: 30px;background: #0d6efd;"
+                                               value="Create Team">
                                     </div>
                                     <p class="text-muted"></p>
                                 </form>
@@ -27,6 +30,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </section>
+        </div>
+    </div>
+
 {% endblock %}
