--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -37,7 +37,8 @@
     <div class="col-12 p-2">
         <div class="row">
             <div class="col-9">
-                <div class="container py-5">
+                <a href="{% url 'team_list' %}">&lt&lt back</a>
+                <div class="container py-2">
                     <h2>Shared Files in {{ team.name }}:</h2>
                     {% if shared_uploads.count > 0 %}
                         <ul>
