manage static files -categorise the static files -modify static url

--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -1,39 +1,6 @@
-<style>
-    .popup-container {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 999;
-    }
-
-    .popup {
-        border-radius: 25px;
-        border: 2px solid white;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: white;
-        padding: 20px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-        z-index: 1000;
-        height: 300px;
-        width: 300px;
-    }
-
-    .close-btn {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        cursor: pointer;
-    }
-</style>
 {% extends 'base_content.html' %}
 {% block content %}
+{% load static %}
     <div class="col-12 p-2">
         <div class="row">
             <div class="col-9">
@@ -96,13 +63,5 @@
             </div>
         </div>
     </div>
-    <script>
-        document.getElementById("InvitePopup").addEventListener("click", function () {
-            document.getElementById("popupContainer").style.display = "block";
-        });
-
-        document.getElementById("closePopup").addEventListener("click", function () {
-            document.getElementById("popupContainer").style.display = "none";
-        });
-    </script>
+    <script src="{% static 'js/popup_window_invite.js' %}"></script>
 {% endblock %}
