--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -113,3 +113,54 @@ h3.profile-title {
   text-decoration: underline;
   color: #0d6efd;
 }
+
+
+/*
+ * Popup window
+ */
+.popup-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.popup {
+    border-radius: 25px;
+    border: 2px solid white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    height: 300px;
+    width: 300px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+}
+
+
+/*
+ * Team list style
+ */
+ul.teams-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul.teams-list li {
+    margin-bottom: 20px;
+    font-size: large;
+}
